feat: 시도 횟수 입력 기능 구현 & 자동차 레이싱 기능 구현