@@ -11,23 +11,20 @@ import org.junit.jupiter.api.Test;
 import racingcar.controller.RacingCarController;
 import racingcar.dto.CarNameDto;
 import racingcar.model.CarGenerator;
-import racingcar.model.RacingCarService;
 
 public class InputTest {
     RacingCarController racingCarController = new RacingCarController();
-    RacingCarService racingCarService = new RacingCarService();
-    InputView inputView = new InputView();
 
     @Test
     void 사용자_입력에서_자동차_이름을_추출한다() {
         String userInput = "a,b,c";
         List<String> carNameList = Arrays.stream(userInput.split(",")).toList();
 
-        systemIn(userInput);
+        System.setIn(new ByteArrayInputStream(userInput.getBytes()));
         List<CarNameDto> carNameDtoList = racingCarController.splitCarName();
         List<String> generatedCarNameList = carNameDtoList.stream()
                 .map(CarNameDto::getCarName)
-                .collect(Collectors.toList());
+                .toList();
 
         assertThat(carNameList).isEqualTo(generatedCarNameList);
     }
@@ -53,10 +50,5 @@ public class InputTest {
         CarGenerator carGenerator = new CarGenerator(userInput);
         assertThatThrownBy(carGenerator::generateCarNameList)
                 .isInstanceOf(IllegalArgumentException.class);
-    }
-
-    //System.in에 원하는 값 지정
-    private void systemIn(String input) {
-        System.setIn(new ByteArrayInputStream(input.getBytes()));
     }
 }
